config adjusts for tsoa and run dev work together
